@@ -16,6 +16,7 @@ VERSION 1.0.10 (Jan ? ??:?? 2004)
 - Shortened output when invoked with no args or from help to fix in 80 columns
 - Changed rotate_interval() subroutine to simply move directories from lower
   intervals up instead of recursively copying hard links
+- Added formatting subroutine to wrap all verbose command output at 80 columns
 
 VERSION 1.0.9 (Jan 6 19:17 2004)
 ------------------------------------------------------------------------------
